<resources>
    <string name="app_name">CinemaReview</string>

    <!--    LOGIN-->
    <string name="login_email">Correo electronico</string>
    <string name="login_password">Contraseña</string>
    <string name="login_btn_message">INGRESAR</string>
    <string name="login_btn_create_account">CREAR CUENTA</string>

    <!--    REGISTER-->
    <string name="register_name">Nombre de usuario</string>
    <string name="register_email">Correo electronico</string>
    <string name="register_password">Contraseña</string>
    <string name="register_password_confirm">Confirmar contraseña</string>
    <string name="register_btn_create_account">REGISTRAR</string>

    <!--    ACCOUNT VIEW-->
    <string name="account_view_username">Nombre de usuario: </string>
    <string name="account_view_email">Correo electronico: </string>
    <string name="account_view_btn_close">Cerrar session</string>

    <!--    HISTORY VIEW-->
    <string name="history_view_empty">Historial vacio</string>

    <!--    SEARCH VIEW-->
    <string name="search_results_empty">Sin resultados</string>
    <string name="search_label_input">Buscar pelicula</string>

    <!--    MOVIE_REVIEW_ITEM-->
    <string name="movie_review_shared">COMPARTIR</string>

    <!--    MOVIE_DESCRIPTION_ITEM-->
    <string name="movie_description_item_director">Director: </string>
    <string name="movie_description_item_sinopsis">Sinopsis</string>
    <string name="movie_description_item_review">Reseñas</string>
    <string name="movie_description_item_review_empty">Sin reseñas</string>
    <string name="movie_description_item_add_review">Agregar reseña</string>

    <!--    MOVIE ADD REVIEW DIALOG-->
    <string name="movie_add_review_dialog_review">Escribir reseña</string>
    <string name="movie_add_review_dialog_btn_send">ENVIAR</string>

    <!--    MENU BOTTOM NAVIGATION-->
    <string name="menu_bottom_navigation_movie">Movie</string>
    <string name="menu_bottom_navigation_search">Search</string>
    <string name="menu_bottom_navigation_history">History</string>
    <string name="menu_bottom_navigation_account">Account</string>

    <!--    MENU BOTTOM NAVIGATION-->
    <string name="menu_review_delete">Delete</string>


    <!-- ERRORS -->
    <string name="INVALID_USER_LOGIN">El correo o contraseña son invalidos</string>
    <string name="EMPTY_USER">Los campos no pueden estar vacios</string>
    <string name="ERROR_CONNECT_FIREBASE">Ocurrio un error en la red</string>
    <string name="REVIEW_EMPTY">La reseña esta vacia</string>
    <string name="REVIEW_UNSAVED">No se pudo agregar la reseña</string>
</resources>