<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35sp"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".pages.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="120sp"
            android:layout_margin="40sp"
            android:src="@drawable/ic_logo_text"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginVertical="15sp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            app:endIconDrawable="@drawable/ic_baseline_clear_24"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_login"
                android:backgroundTint="@color/colorText_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email"
                tools:ignore="RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginVertical="15sp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_width="match_parent"
            app:endIconMode="password_toggle"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_login"
                android:backgroundTint="@color/colorText_2"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                tools:ignore="RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_marginVertical="15sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorText_1"
            android:textStyle="bold"
            android:text="@string/login_btn_message"
            tools:ignore="HardcodedText"/>

        <TextView
            android:layout_marginTop="100sp"
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="15dp"
            android:paddingVertical="8dp"
            android:text="@string/login_btn_create_account"
            android:textColor="@color/colorText_2" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>